Add test coverage. Improve tests. Eliminate warnings. Relates to #57